--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,22 +1,30 @@
 buildscript {
     repositories {
+        mavenLocal()
+        google()
         jcenter()
     }
-
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.2.+'
+        classpath 'com.android.tools.build:gradle:3.1.2'
     }
 }
+
+// setup dependencies repositories
+repositories {
+    mavenLocal()
+    google()
+    jcenter()
+}
+
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 27
 
     defaultConfig {
-        minSdkVersion 18
-        targetSdkVersion 22
+        minSdkVersion 21
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
@@ -30,6 +38,6 @@ repositories {
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:0.+'
-    compile project(':discovery')
+    implementation 'com.facebook.react:react-native:0.20.1'
+    implementation "com.joshblour.discovery:discovery:0.0.3"
 }
